Ticket #28136: Added control to embedd a micro-frontend.

--- a/com.top_logic.themes.core/src/main/webapp/style/core.css
+++ b/com.top_logic.themes.core/src/main/webapp/style/core.css
@@ -2901,3 +2901,12 @@ i.tl-accent-2 {
 	--highlight-fg: var(--highlight);
 	color: var(--highlight, inherit);
 }
+
+iframe.tlEmbedd {
+	border: none;
+	top: 0;
+	left: 0;
+	height: 100%;
+	width: 100%;
+	position: absolute;
+}
