--- a/com.top_logic.themes.core/src/main/webapp/style/tables.css
+++ b/com.top_logic.themes.core/src/main/webapp/style/tables.css
@@ -943,7 +943,7 @@ table .cDecoratedCell > .lFlexible > :first-child:not(a) {
 	flex-grow: 2;
 }
 
-table:not(.i18nStringTable) td span.cDecoratedCell {
+table td span.cDecoratedCell {
 	gap: var(--spacing-01);
 }
 
@@ -954,15 +954,6 @@ table:not(.i18nStringTable) td span.cDecoratedCell {
 .tl-table__row:not(.tblSelected):hover .treeType > i, 
 td.tl-table__cell--selected .treeType > i {
 	color: var(--highlight-fg, var(--button-fg, var(--icon-primary)));
-}
-
-table.i18nStringTable td span.cDecoratedCell .lFlexible {
-	padding-left: 0px;
-	padding-right: 0px;
-}
-
-table.i18nStringTable td {
-	padding-bottom: var(--spacing-02);
 }
 
 table td span.cTextPopup span.content {
@@ -1694,10 +1685,6 @@ td.tl-table__cell--selected {
 
 .tl-table__cell--selectable .fToggle a {
 	color: var(--highlight-fg, var(--icon-secondary));
-}
-
-.i18nStringTable.tl-table {
-	border: none;
 }
 
 .adjustableColumn {
