Ticket #28386: Added padding before label when rendered after value.

--- a/com.top_logic.themes.core/src/main/webapp/style/form.css
+++ b/com.top_logic.themes.core/src/main/webapp/style/form.css
@@ -718,6 +718,10 @@ div.dfListAdd {
 	margin-bottom: 0;
 }
 
+.rf_inputCell.rf_labelAfter label {
+	padding-left: var(--spacing-02);
+}
+
 .rf_inputCell .ace_editor div,
 .rf_inputCell .ace_editor {
 	line-height: 24px;
