Ticket #28386: Prevent expand toggle on double-click.
Double click is used in the form editor to open settings.

--- a/com.top_logic/src/main/java/com/top_logic/layout/form/boxes/reactive_tag/FORM_GROUP_TEMPLATE.template.html
+++ b/com.top_logic/src/main/java/com/top_logic/layout/form/boxes/reactive_tag/FORM_GROUP_TEMPLATE.template.html
@@ -7,6 +7,7 @@
 	<tl:if test="hasLegend || collapsible || hasMenu">
 		<div class="rf_header"
 			onclick="{onclick}"
+			ondblclick="{ondblclick}"
 		>
 			<tl:if test="hasLegend">
 				{title}
