--- a/com.top_logic/src/main/java/com/top_logic/layout/table/renderer/TABLE_BODY_ROW_TEMPLATE.template.html
+++ b/com.top_logic/src/main/java/com/top_logic/layout/table/renderer/TABLE_BODY_ROW_TEMPLATE.template.html
@@ -4,6 +4,7 @@
  -->
 <tr id="{id}"
 	class="{isSelected ? selectedClass} {defaultClasses}"
+	style="--table-row-height:{rowHeight};"
 	draggable="{isDraggable ? true : false}"
 	data-drag-image="{isDraggable ? dragImage}"
 	data-context-menu="{hasContextMenu ? id}"
