--- a/com.top_logic/src/main/java/com/top_logic/layout/table/renderer/TABLE_HEADER_CELL_TEMPLATE.template.html
+++ b/com.top_logic/src/main/java/com/top_logic/layout/table/renderer/TABLE_HEADER_CELL_TEMPLATE.template.html
@@ -9,14 +9,14 @@
  -->
 <th class="{classes} {isSticky ? 'tl-position--sticky'}"
 	scope="{isRowHeader ? 'row' : 'col'}"
-	style="height: {rowHeight};{isSticky ? 'left:' + offset + ';'}{styles}"
+	style="{isSticky ? 'left:' + offset + ';'}{styles}"
 	colspan="{colspan}"
 	data-is-fixed="{isSticky}"
 	data-first-column-index="{firstColumnIndex}"
 	data-last-column-index="{lastColumnIndex}"
 >
 	<div class="tl-table__cell-container"
-		style="{isSticky ? 'position:relative;'}overflow:hidden;white-space:nowrap;height:{rowHeight};"
+		style="{isSticky ? 'position:relative;'};"
 	>
 		{label}
 	</div>
