--- a/com.top_logic/src/main/java/com/top_logic/layout/table/renderer/TABLE_HEADER_ROW_TEMPLATE.template.html
+++ b/com.top_logic/src/main/java/com/top_logic/layout/table/renderer/TABLE_HEADER_ROW_TEMPLATE.template.html
@@ -1,4 +1,4 @@
-<tr style="{headerRowStyles}"
+<tr style="--table-row-height:{rowHeight}; {headerRowStyles}"
 	class="{headerRowClasses}"
 >
 	{header_row_cells}
