--- a/com.top_logic/src/main/java/com/top_logic/layout/table/renderer/TABLE_BODY_CELL_TEMPLATE.template.html
+++ b/com.top_logic/src/main/java/com/top_logic/layout/table/renderer/TABLE_BODY_CELL_TEMPLATE.template.html
@@ -1,9 +1,7 @@
 <td class="{classes} {isSticky ? 'tl-position--sticky'}"
-	style="height: {rowHeight};{isSticky ? 'left:' + offset + ';'}{styles}"
+	style="{isSticky ? 'left:' + offset + ';'}{styles}"
 >
-	<div class="tl-table__cell-container"
-		style="overflow:hidden;white-space:nowrap;height:{rowHeight};"
-	>
+	<div class="tl-table__cell-container">
 		{label}
 	</div>
 </td>
