--- a/com.top_logic.themes.core/src/main/webapp/style/form.css
+++ b/com.top_logic.themes.core/src/main/webapp/style/form.css
@@ -30,7 +30,7 @@
     overflow: hidden;
 	flex-grow: 2;
 	display: flex;
-	line-height: 2rem;
+	line-height: var(--form-line-height);
 }
 
 .dfTitleLabel {
@@ -1573,8 +1573,8 @@ td.tl-table__cell--selected .cDecoratedCell a.input-image:focus {
     align-items: center;
     justify-content: center;
     color: var(--button-fg, var(--icon-primary));
-    height: 2rem;
-    width: 2rem;
+    height: var(--form-line-height);
+    width: var(--form-line-height);
 }
 
 .lFixedRight .button_minus {
@@ -1655,7 +1655,7 @@ input.is-checkbox[disabled] {
 	background: var(--highlight-bg, var(--field));
 	border: none;
 	padding: 0 var(--spacing-03);
-	height: 2rem;
+	height: var(--form-line-height);
 	box-sizing: border-box;
 	max-width: 100%;
 	white-space: break-spaces;
@@ -1891,7 +1891,7 @@ select.tl-select:not([multiple="multiple"]) {
 	color: var(--text-primary);
 	padding-left: var(--spacing-03);
 	padding-right: var(--spacing-06);
-	height: 2rem;
+	height: var(--form-line-height);
 	max-width: 100%;
 	box-sizing: border-box;
 	background-image: linear-gradient(45deg, transparent 49%, var(--icon-primary) 50%), linear-gradient(135deg, var(--icon-primary) 49%, transparent 50%);
@@ -2203,8 +2203,8 @@ div.imageContainer {
 	display: inline-flex;
 	align-items: center;
 	justify-content: center;
-	height: 2rem;
-	width: 2rem;
+	height: var(--form-line-height);
+	width: var(--form-line-height);
     margin-bottom: var(--spacing-01);
     margin-right: var(--spacing-01);
 	border: 1px solid var(--border-subtle);
@@ -2488,7 +2488,7 @@ a.input-image.tristate.tBoolean {
 	letter-spacing: var(--body-02-letter-spacing);
 	width: fit-content;
 	max-width: 100%;
-	height: 2rem;
+	height: var(--form-line-height);
 	border: none;
 	display: inline-flex;
 	align-items: center;
@@ -2553,7 +2553,7 @@ span.disabled .ddwttDropBtn {
 
 .ddwttDDBox span {
 	margin: 0;
-	line-height: 2rem;
+	line-height: var(--form-line-height);
 }
 
 .ddwttContainer .ddwttDDBox {
@@ -2571,7 +2571,7 @@ span.disabled .ddwttDropBtn {
 	font-size: var(--body-02-font-size);
 	line-height: var(--body-02-line-height);
 	letter-spacing: var(--body-02-letter-spacing);
-	height: 2rem;
+	height: var(--form-line-height);
 	border: none;
 	border-radius: initial;
 	background: var(--field);
@@ -2649,7 +2649,7 @@ img.ddwttItemIcon {
 	width: fit-content;
 	align-items: center;
 	justify-content: center;
-	height: 2rem;
+	height: var(--form-line-height);
 	border: 1px solid var(--border-subtle);
 	box-sizing: border-box;
 	padding: 0 var(--spacing-02);
@@ -2778,7 +2778,7 @@ div.sifSearchElementUnselectable {
 	text-decoration:none;
     z-index: 21;
 	padding: 0 var(--spacing-02);
-	line-height: 2rem;
+	line-height: var(--form-line-height);
 }
 
 div.sifSearchElement {
@@ -2798,7 +2798,7 @@ div.sifSearchElementSelected {
     z-index: 21;
     cursor: pointer;
     padding: 0 var(--spacing-02);
-    line-height: 2rem;
+    line-height: var(--form-line-height);
 }
 
 div.sifSearchElementSelected:focus {
