--- a/com.top_logic.themes.core/src/main/webapp/style/core.css
+++ b/com.top_logic.themes.core/src/main/webapp/style/core.css
@@ -1825,10 +1825,21 @@ span.ltcCounting input {
 ****	Tiles Styles	****
 ****					****
 */
+.tileContainer {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	display: grid;
+	align-items: center;
+	justify-items: center;
+}
+
 .tileRow {
 	display: flex;
 	flex-wrap: wrap;
 	gap: var(--spacing-03);
+	justify-content: space-evenly;
+	width: 100%;
 }
 
 .tileContainer .tileNoCards {
@@ -1850,15 +1861,20 @@ span.ltcCounting input {
 	background: var(--layer);
 	border: 1px solid var(--border-subtle);
 	margin: var(--spacing-02) 0;
-	padding-bottom: var(--spacing-03);
 	min-width: 0px;
 	background-clip: border-box;
 	border-radius: var(--corner-radius);
-	height: 20rem;
 	width: 16rem;
 	overflow: hidden;
 	cursor: pointer;
 	position: relative;
+	border: var(--link-primary) 3px solid;
+	border-radius: 10px;
+	box-shadow: 0px 0px 5px 5px white;
+}
+
+.card:hover {
+	box-shadow: 0px 0px 3px 3px var(--link-primary);
 }
 
 .card:active {
@@ -1874,10 +1890,6 @@ span.ltcCounting input {
 	background-color: var(--layer-active);
 }
 
-.card:hover {
-	box-shadow: var(--shadow-menu);
-}
-
 .card .cButton {
 	position: absolute;
 	right: var(--spacing-03);
@@ -1889,7 +1901,7 @@ span.ltcCounting input {
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 80%;
+    min-height: 15rem;
     overflow: hidden;
     background: var(--background);
 }
@@ -1958,31 +1970,17 @@ span.card-img-top {
 h5.card-title {
 	order: 2;
 	flex-shrink: 0;
-	padding: var(--spacing-02) var(--spacing-03) 0 var(--spacing-03);
+	padding: var(--spacing-02) var(--spacing-03);
 	background: var(--layer);
 	margin: 0;
 	overflow: hidden;
-	white-space: nowrap;
-	text-overflow: ellipsis;
+	text-align: center;
+	line-height: 1.4rem;
+	font-size: 1.2rem;
 }
 
-h5.card-title a {
-	color: var(--text-primary);
-	font-family: var(--font-family);
-	font-weight: bold;
-	font-size: var(--heading-03-font-size);
-	line-height: var(--heading-03-line-height);
-	letter-spacing: var(--heading-03-letter-spacing);
-}
-
-h5.card-title a:hover {
-	color: var(--text-primary);
+h5.card-title > a:hover {
 	text-decoration: none;
-}
-
-h5.card-title a:focus {
-	color: var(--text-primary);
-	box-shadow: none;
 }
 
 .card-text {
@@ -1993,11 +1991,7 @@ h5.card-title a:focus {
 	line-height: var(--body-01-line-height);
 	letter-spacing: var(--body-01-letter-spacing);
 	background: var(--layer);
-	padding: 0 var(--spacing-03);
-	margin: 0;
-	overflow: hidden;
-	text-wrap: nowrap;
-	text-overflow: ellipsis;
+	padding: 0 var(--spacing-03) var(--spacing-02) var(--spacing-03);
 }
 
 .card-text > *,
