Ticket #28386: Added padding to tile container.
Tiles should not stick to the borders.

--- a/com.top_logic.themes.core/src/main/webapp/style/core.css
+++ b/com.top_logic.themes.core/src/main/webapp/style/core.css
@@ -1832,6 +1832,8 @@ span.ltcCounting input {
 	display: grid;
 	align-items: center;
 	justify-items: center;
+	padding: var(--spacing-05);
+	box-sizing: border-box;
 }
 
 .tileRow {
