--- a/com.top_logic.themes.core/src/main/webapp/style/tables.css
+++ b/com.top_logic.themes.core/src/main/webapp/style/tables.css
@@ -914,7 +914,7 @@ table td span.cTextPopup,
 table td span.cExpandableTextInput,
 table td span.cTextInput,
 table td span.cIconChooser,
-table td .cDataItem,
+table td span.cDataItem.download,
 table td span.downloadControl {
 	display: flex;
 	flex-wrap: nowrap;
