Ticket #28386: Fixed duplicate tabbar borders in design mode.

--- a/com.top_logic.themes.core/src/main/webapp/style/coreButtons.css
+++ b/com.top_logic.themes.core/src/main/webapp/style/coreButtons.css
@@ -694,8 +694,9 @@ a.fChoose:hover,
 
 .tlAdditionalRightContent .cButton.cImageButton,
 .tlAdditionalRightContent .cButton.cImageButton.cmdButtonDisabled {
-	height: 1.25rem;
-	width: 1.25rem;
+	height: var(--tabbar-height);
+	width: var(--tabbar-height);
+	box-sizing: border-box;
 }
 
 .sblLogo .cButton.cImageButton, 
