Ticket #28386: Fixed absurd CSS rules of global filter reset button.

--- a/com.top_logic.themes.core/src/main/webapp/style/tables.css
+++ b/com.top_logic.themes.core/src/main/webapp/style/tables.css
@@ -648,11 +648,11 @@ td.fltButton {
 	color: var(--support-danger);
 }
 
-i.bi-funnel-fill.tablefilter {
+.fltReset a:not(.disabled) {
 	color: var(--icon-interactive);
 }
 
-a:not(.disabled) i.bi-funnel-fill.tablefilter:hover {
+.fltReset:hover a:not(.disabled) {
 	color: var(--support-danger);
 }
 
