--- a/com.top_logic.themes.core/src/main/webapp/style/tables.css
+++ b/com.top_logic.themes.core/src/main/webapp/style/tables.css
@@ -929,10 +929,10 @@ table td span.cTextInput,
 table td span.cIconChooser,
 table td span.cDataItem.download,
 table td span.downloadControl {
-	display: flex;
+	display: inline-flex;
 	flex-wrap: nowrap;
 	align-items: center;
-	width: 100%;
+	min-width: 100%;
 	height: 100%;
 }
 
