Revert "Ticket #28386: Made cells expanding on auto-fit work again."
This breaks the display of the error icon in table cells.

This reverts commit 57694d27d0c73d2197697e924c9e1b06ee59e52b.

--- a/com.top_logic.themes.core/src/main/webapp/style/tables.css
+++ b/com.top_logic.themes.core/src/main/webapp/style/tables.css
@@ -929,10 +929,10 @@ table td span.cTextInput,
 table td span.cIconChooser,
 table td span.cDataItem.download,
 table td span.downloadControl {
-	display: inline-flex;
+	display: flex;
 	flex-wrap: nowrap;
 	align-items: center;
-	min-width: 100%;
+	width: 100%;
 	height: 100%;
 }
 
